--- a/CAPSProj/src/main/resources/templates/lecturer/coursestaught.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/coursestaught.html
@@ -1,46 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head>
-	<meta charset="ISO-8859-1">
-	<title>View Courses Taught</title>
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
-	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	    <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/css/jquery.dataTables.css">
-      <link rel="stylesheet" type="text/css" href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/css/jquery.dataTables_themeroller.css">
-        <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.0/jquery.dataTables.min.js"></script>
-	<script>
-	  $(document).ready( function () {
-    	$('#table_coursestaught').DataTable();
-		} );
-	</script>
-</head>
+<head th:replace="Fragments/layout.html :: headerfiles"> </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">CAPS</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" th:href = "@{/index}">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" th:href = "@{/lecturer/enrolment}">View Student Enrollment</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+	<nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
 
 	<div class = "container">
 		<div class = "row">
 			<h2 class = "text-center"> Courses Taught </h2>
 		</div>
 
-	<table id = "table_coursestaught" class="table table-striped">
+	<table id = "table_coursestaught" class = "table table-responsive">
 		<thead>
 			<tr>
 				<th>S/N</th>
@@ -62,6 +33,11 @@
 		</tbody>
 	</table>
 	</div>
+		<script>
+	  $(document).ready( function () {
+    	$('#table_coursestaught').DataTable();
+		} );
+	</script>
 </body>
 
 </html>
