added authentication in student controller; changed something in html

--- a/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
+++ b/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
@@ -51,8 +51,8 @@
 	<div>
 	<!-- temporarily view student of userID == 1 -->	
 	<button><a th:href="@{/student/lecturercourses}">Enroll for a course</a></button>
-	<button><a th:href="@{/student/enrolmentlist/1}">View Enrolment List and Withdraw</a></button>
-	<button><a th:href="@{/student/mycourses/1}">View My Courses</a></button>
+	<button><a th:href="@{/student/enrolmentlist}">View Enrolment List and Withdraw</a></button>
+	<button><a th:href="@{/student/mycourses}">View My Courses</a></button>
 	</div>
 	
 </body>
