--- a/CAPSProj/src/main/resources/templates/student/enrolmentlist.html
+++ b/CAPSProj/src/main/resources/templates/student/enrolmentlist.html
@@ -48,17 +48,15 @@
 					<button><a th:href="@{/student/withdrawenrolment/} + ${enrolment.id}">Withdraw</a></button> 
 				</td>
 			</span> 
-								
-									
-			
+																	
 		</tr>	
 	</tbody>
 	
 </table>
 	<!-- temporarily view student of userID == 1 -->
 	<button><a th:href="@{/student/lecturercourses}">Enroll for a course</a></button>
-	<button><a th:href="@{/student/gradesandgpa/1}">View Grades & GPA</a></button>
-	<button><a th:href="@{/student/mycourses/1}">View My Courses</a></button>
+	<button><a th:href="@{/student/gradesandgpa}">View Grades & GPA</a></button>
+	<button><a th:href="@{/student/mycourses}">View My Courses</a></button>
 </body>
 </html>
 	
