--- a/CAPSProj/src/main/resources/templates/lecturer/coursestaught.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/coursestaught.html
@@ -11,7 +11,7 @@
 			<h2 class = "text-center"> Courses Taught </h2>
 		</div>
 
-	<table id = "table_coursestaught" class = "table table-responsive">
+	<table id = "table_coursestaught" class="table table-striped">
 		<thead>
 			<tr>
 				<th>S/N</th>
