add: session in manage enrolment

--- a/CAPSProj/src/main/resources/templates/admin/addenrolment.html
+++ b/CAPSProj/src/main/resources/templates/admin/addenrolment.html
@@ -19,12 +19,12 @@
 			<form action ="#" th:action="@{/admin/enrolment/create}" th:object = ${enrolment} method = "post">
 				<label>Student Name:</label>
 				<select th:field="*{student.userID}">
-            		<option th:each="p : ${studentList}" th:value="${p}" th:text="${p}" />
+            		<option th:each="p : ${studentList.entrySet()}" th:value="${p.key}" th:text="${p.key} +' | ' +${p.value}" />
         		</select>
 				<br><br>
 				<label>Course Name:</label>
 				<select th:field="*{course.courseID}">
-            		<option th:each="p : ${courseList}" th:value="${p}" th:text="${p}" />
+            		<option th:each="p : ${courseList.entrySet()}" th:value="${p.key}" th:text="${p.key} +' | ' +${p.value}" />
         		</select>
         		<br><br>
 				<button type="submit">Create</button>
