--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -45,7 +45,7 @@
 			<h3 class = "text-center"> Course Enrollment Details: </h3>
 		</div>
 
-	<table id = "table_enrolment">
+	<table id = "table_enrolment" class="table table-striped table-bordered">
 		<thead>
 			<tr>
 				<th>S/N</th>
