--- a/CAPSProj/src/main/resources/templates/lecturer/gradecourse.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/gradecourse.html
@@ -30,7 +30,7 @@
 				</tr>
 			</table>
 		</form>
-		<table id = "table_gradecourse">
+		<table id = "table_gradecourse" class="table table-striped table-bordered">
 
 			<thead>
 				<tr>
