--- a/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
@@ -34,7 +34,7 @@
 			<h3 class = "text-center">Student's Grades: </h3>
 		</div>
 
-	<table id = "table_viewgrades">
+	<table id = "table_viewgrades" class="table table-striped table-bordered">
 		<thead>
 			<tr>
 				<th>S/N</th>
