--- a/CAPSProj/src/main/resources/templates/admin/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/admin/enrolment.html
@@ -5,68 +5,75 @@
 <nav th:replace="Fragments/layout.html :: navigationBar"> </nav>
 <h1>Enrolment Lists</h1>
 <a th:href="@{/admin/addenrolment}"> Add Enrolment</a>
-<table id = "table_adminenrolment">
-	<thead>
-	<tr>
-		<th>No</th>
-		<th>Enrolment ID</th>
-		<th>Student Name</th>
-		<th>Student Email</th>
-		<th>Date of Enrollment</th>
-		<th>Grades</th>
-		<th>Enrolment Status</th>
-		<th>Course</th>
-		<th></th>
-		<th></th>
-		<th></th>
-	</tr>
-	</thead>
 
-	<tbody>
-	<tr th:each = "enrolment,iterator: ${enrolmentlist}">
-		<td th:text = "${iterator.index + 1}"></td>
-		<td th:text = "${enrolment.id}"></td> 
-		<td th:text = "${enrolment.student.firstName} + ' ' + ${enrolment.student.lastName}" ></td>
-		<td th:text = "${enrolment.student.email}"></td>
-		<td th:text = "${enrolment.dateOfEnrollment}"></td>
-		<td th:text = "${enrolment.grades}"></td>
-		<td th:text = "${enrolment.enrolmentStatus}"></td>
-		<td th:text = "${enrolment.course.courseName}"></td>
-		<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).REJECTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).EXPELLED} ">
-			<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}">
-				<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}">
-					<td>
-						<a th:href="@{/admin/approveenrolment/}+${enrolment.id}" > Approve </a>
-					</td>
-					<td>
-						<a th:href="@{/admin/approveenrolment/}+${enrolment.id}" > Reject </a>
-					</td>
-					<td>
-						<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
-					</td>
-	    		</a>
-	    		<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED}">
-					<td>
-						<a th:href="@{/admin/editenrolment/}+${enrolment.id}" > Edit </a>
-					</td>
-					<td>-</td>
-					<td>
-						<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
-					</td>
-	    		</a>
-			</a>
-		</a>
-			<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).REJECTED} 
-			or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).WITHDRAWN}">
-	    	<td>
-	    		<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
-			</td>
-			<td>-</td>
-			<td>-</td>
-			</a>
-	</tr>
-	</tbody>
-</table>
+<div class = "container">
+	<div class = "row">
+		<div class = "container">
+			<table id = "table_adminenrolment" class="table table-striped table-bordered">
+				<thead>
+				<tr>
+					<th>No</th>
+					<th>Enrolment ID</th>
+					<th>Student Name</th>
+					<th>Student Email</th>
+					<th>Date of Enrollment</th>
+					<th>Grades</th>
+					<th>Enrolment Status</th>
+					<th>Course</th>
+					<th>Action</th>
+					<th>Action</th>
+					<th>Action</th>
+				</tr>
+				</thead>
+
+				<tbody>
+				<tr th:each = "enrolment,iterator: ${enrolmentlist}">
+					<td th:text = "${iterator.index + 1}"></td>
+					<td th:text = "${enrolment.id}"></td> 
+					<td th:text = "${enrolment.student.firstName} + ' ' + ${enrolment.student.lastName}" ></td>
+					<td th:text = "${enrolment.student.email}"></td>
+					<td th:text = "${enrolment.dateOfEnrollment}"></td>
+					<td th:text = "${enrolment.grades}"></td>
+					<td th:text = "${enrolment.enrolmentStatus}"></td>
+					<td th:text = "${enrolment.course.courseName}"></td>
+					<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).REJECTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).EXPELLED} ">
+						<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED} or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}">
+							<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).PENDING}">
+								<td>
+									<a th:href="@{/admin/approveenrolment/}+${enrolment.id}" > Approve </a>
+								</td>
+								<td>
+									<a th:href="@{/admin/approveenrolment/}+${enrolment.id}" > Reject </a>
+								</td>
+								<td>
+									<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
+								</td>
+							</a>
+							<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).ACCEPTED}">
+								<td>
+									<a th:href="@{/admin/editenrolment/}+${enrolment.id}" > Edit </a>
+								</td>
+								<td>-</td>
+								<td>
+									<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
+								</td>
+							</a>
+						</a>
+					</a>
+						<a th:if="${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).REJECTED} 
+						or ${enrolment.enrolmentStatus == T(sg.edu.iss.caps.model.EnrolmentStatus).WITHDRAWN}">
+						<td>
+							<a th:href="@{/admin/deleteenrolment/}+${enrolment.id}" > Delete </a>
+						</td>
+						<td>-</td>
+						<td>-</td>
+						</a>
+				</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
 <script>
 	  $(document).ready( function () {
     	$('#table_adminenrolment').DataTable();
