--- a/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
+++ b/CAPSProj/src/main/resources/templates/student/gradesandgpa.html
@@ -6,7 +6,9 @@
 <h1>Grades And GPA</h1>
 
 <div class = "container"> 
-<table id = "table_gradesgpa">
+	<div class = "row">
+		<div class = "container">
+<table id = "table_gradesgpa" class="table table-striped table-bordered">
 
 	<thead>
 
@@ -36,6 +38,8 @@
 	</tbody>
 	
 </table>&nbsp;&nbsp;
+		</div>
+	</div>
 </div>
 
 
