--- a/CAPSProj/src/main/resources/templates/student/mycourses.html
+++ b/CAPSProj/src/main/resources/templates/student/mycourses.html
@@ -7,7 +7,9 @@
 <h1>My Courses</h1>
 
 <div class = "container">
-<table id = "table_mycourses">
+	<div class = "row">
+		<div class = "container">
+<table id = "table_mycourses" class="table table-striped table-bordered">
 
 	<thead>
 
@@ -30,11 +32,17 @@
 			<td th:text="${enrolment.course.courseName}">Course Name</td>
 			<td th:text="${enrolment.course.credits}">Credits</td>
 			
-			<span th:each="user: ${enrolment.course.users}"> 
+			<td>
+	      	<p th:each="user: ${enrolment.course.users}">
+	      		<span th:if= "${user.role == T(sg.edu.iss.caps.model.Roles).LECTURER}" th:text="${user.firstName} + ' ' + ${user.lastName}"> Lecturer Name </span>
+	      	</p>  
+	        </td>
+
+			<!-- <span th:each="user: ${enrolment.course.users}"> 
                <a th:if= "${user.role == T(sg.edu.iss.caps.model.Roles).LECTURER}">
                     <td th:text="${user.firstName} + ' ' + ${user.lastName}">Lecturer Name</td>
                </a>
-           </span>	
+           </span>	 -->
            
            <td th:text="${#temporals.format(enrolment.course.courseStartDate, 'yyyy-MM-dd')}">CourseSartDate</td>
            <td th:text="${#temporals.format(enrolment.course.courseEndDate, 'yyyy-MM-dd')}">CourseEndDate</td>
@@ -49,6 +57,8 @@
 	<button><a th:href="@{/student/lecturercourses}">Enroll for a course</a></button>
 	<button><a th:href="@{/student/enrolmentlist/1}">View Enrolment List and Withdraw</a></button>
 	<button><a th:href="@{/student/gradesandgpa/1}">View Grades & GPA</a></button>
+		</div>
+	</div>
 </div>
 <script>
 	  $(document).ready( function () {
