--- a/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/viewstudentgrades.html
@@ -9,20 +9,21 @@
 <div class = "container">
 		<div class = "row">
 			<div class = "container">
-				<h2 class = "text-center"> View a Student's Performance </h2>
+				<h2 class = "text-center mb-3"> View a Student's Performance </h2>
 				<div>
 					<form class= "form-inline justify-content-center" th:action="@{/lecturer/viewstudentgrades/}"  method="GET">
+		
+							<div class = "form-group">
+								<label class = "ml-3 mb-3 mr-3"> Student ID: </label>
+									<input type = "number" name = "userID" class = "form-control" required>
+							</div>
 
-						<div class = "form-group">
-							<label class = "ml-3 mb-3 mr-3"> Student ID: </label>
-								<input type = "number" name = "userID" class = "form-control" required>
-						</div>
+							<div class = "box-footer float-end ml-3">
+								<button type="submit" class = "btn btn-primary">
+									Submit
+								</button>
+							</div>
 
-						<div class = "box-footer float-end mt-3 ml-3">
-							<button type="submit" class = "btn btn-primary">
-								Submit
-							</button>
-						</div>
 					</form>
 				</div>
 			</div>
@@ -31,7 +32,15 @@
 
 	<div class = "container">
 		<div class = "row justify-content-center mt-4">
-			<h3 class = "text-center">Student's Grades: </h3>
+			<span th:each = "user : ${users}">
+				<a th:if="${user.role == T(sg.edu.iss.caps.model.Roles).STUDENT}">
+					<h5 class = "text-center">Grades For: </h5>
+					<div class = "text-center">
+					<p th:text = "'Student Name: ' + ${user.firstName} + ' ' + ${user.lastName}"></p>
+					<p th:text = "'Student ID: ' + ${user.userID}"> </p>
+					</div>
+				</a>	
+			</span>
 		</div>
 
 	<table id = "table_viewgrades" class="table table-striped table-bordered">
