--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -42,7 +42,10 @@
 
 	<div class = "container">
 		<div class = "row justify-content-center">
-			<h3 class = "text-center"> Course Enrollment Details: </h3>
+			<span th:each = "course : ${selectedCourseName}">
+				<h5 class = "text-center" th:text = "'Course Enrollment Details for: ' + ${course.courseName}"> </h5>
+				<h5 class = "text-center" th:text = "'Course ID: ' + ${course.courseID}"> </h5>
+			</span>
 		</div>
 
 	<table id = "table_enrolment" class="table table-striped table-bordered">
