Add: Select an option as disabled selection option for lecturer/enrolments page

--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -16,6 +16,7 @@
 						<div class = "form-group">
 							<label class = "ml-3 mb-3 mr-3"> Course Name: </label>
 								<select id="selectCourse" name = "courseName">
+									<option disabled selected>Select an Option</option>
 									<option 
 									th:each = "course: ${coursestaught}"
 									th:value = "${course.courseName}"
