Performed lock by role.
Added error 403 - Forbidden Page

--- a/CAPSProj/src/main/resources/templates/index.html
+++ b/CAPSProj/src/main/resources/templates/index.html
@@ -39,9 +39,9 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 		            Services
 		          </a>
 		          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-		            <li><a class="dropdown-item" href="#">Students</a></li>
-		            <li><a class="dropdown-item" href="#">Lecturers</a></li>
-		            <li><a class="dropdown-item" href="#">Admin</a></li>
+		            <li><a class="dropdown-item" href="/student/gradesandgpa">Students</a></li>
+		            <li><a class="dropdown-item" href="/lecturer/coursestaught">Lecturers</a></li>
+		            <li><a class="dropdown-item" href="/admin/list">Admin</a></li>
 		            <li><hr class="dropdown-divider"></li>
 		            <li><a class="dropdown-item" href="#">Contact IT</a></li>
 		          </ul>
