--- a/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
+++ b/CAPSProj/src/main/resources/templates/lecturer/enrolment.html
@@ -30,7 +30,7 @@
 							<input type = "date" name = "courseStartDate" class = "form-control" required>
 						</div>
 						
-						<div class = "box-footer float-end mt-3 ml-3">
+						<div class = "box-footer float-end mt-3 ml-3 mb-3">
 							<button type="submit" class = "btn btn-primary">
 								Submit
 							</button>
